2A/05_Projet_GL/src/test/deca/syntax/valid/HelloWorld/02_main_vide.deca
// Description:
//    Programme avec main vide.
//
// Resultats:
//    Rien
//
// Historique:
//    cree le 20/12/2023

{
    
}