2A/05_Projet_GL/src/test/deca/syntax/invalid/HelloWorld/05_instr_string_out_main.deca
// Description:
//    Programme avec un string hors le bloc de main.
// Resultats:
//    Erreur syntaxique : 12:0: mismatched input '"HelloWorld"' .
//
// Historique:
//    cree le 20/12/2023

{
        
}
"HelloWorld";